--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portofolio</title>
+    <meta name="description" content="My Portfolio | OTSEE">
+    <meta name="keywords" content="OTSEE, VixiaID, Vixia">
     <link rel="stylesheet" href="/public/css/style.css">
     <link rel="stylesheet" href="/public/fontawesome/css/all.css">
     <link rel="stylesheet" href="/public/css/running.css">
@@ -18,7 +20,14 @@
       <div class="page-one-desc">
           <p class="identity-name">OTSEE</p>
           <div class="page-identity">
-            <p class="identity-desc">Hi i'm <p class="identity-desc-job"><span id="typed" class="typed"></span><span class="cursor">&nbsp;</span></p></p>
+            <p class="identity-desc">
+              Hi i'm 
+              <p class="identity-desc-job">
+                <span id="typed" class="typed">
+                </span>
+                <span class="cursor">&nbsp;</span>
+              </p>
+           </p>
           </div>
       </div>
     </div>
